completed doing front layout

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bruno+Ace+SC&family=Edu+TAS+Beginner:wght@600&family=IBM+Plex+Mono&family=Kablammo&family=Satisfy&family=Vina+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Black+Ops+One&family=Bruno+Ace+SC&family=Edu+TAS+Beginner:wght@600&family=IBM+Plex+Mono&family=Kablammo&family=Lilita+One&family=Satisfy&family=Vina+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Black+Ops+One&family=Bruno+Ace+SC&family=Edu+TAS+Beginner:wght@600&family=IBM+Plex+Mono&family=Kablammo&family=Lilita+One&family=Righteous&family=Satisfy&family=Vina+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
